--- a/package.json
+++ b/package.json
@@ -16,5 +16,21 @@
   "bugs": {
     "url": "https://github.com/mstorino/buber/issues"
   },
+  "dependencies": {
+    "axios": "^0.12.0",
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "mongoose": "^4.5.1",
+    "morgan": "^1.7.0",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3"
+    },
+  "devDependencies": {
+    "babel-core": "^6.3.13",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "webpack": "^1.13.1"
+    },
   "homepage": "https://github.com/mstorino/buber#readme"
 }
