--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "express": "^4.14.0",
     "mongoose": "^4.5.1",
     "morgan": "^1.7.0",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-router": "^2.4.1"
     },
   "devDependencies": {
     "babel-core": "^6.3.13",
@@ -31,6 +32,12 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "webpack": "^1.13.1"
+    },
+    "scripts": {
+       "test": "echo \"Error: no test specified\" && exit 1",
+      "start": "node server.js",
+      "build": "webpack -w",
+      "dev": "webpack & node server.js"
     },
   "homepage": "https://github.com/mstorino/buber#readme"
 }
