--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "webpack -w",
+    "dev": "webpack & node server.js"
   },
   "repository": {
     "type": "git",
@@ -18,26 +20,21 @@
   },
   "dependencies": {
     "axios": "^0.12.0",
-    "body-parser": "^1.15.2",
-    "express": "^4.14.0",
-    "mongoose": "^4.5.1",
-    "morgan": "^1.7.0",
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "mongoose": "^4.11.0",
+    "morgan": "^1.8.2",
+    "passport": "^0.3.2",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-router": "^2.4.1"
-    },
+  },
   "devDependencies": {
     "babel-core": "^6.3.13",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "webpack": "^1.13.1"
-    },
-    "scripts": {
-       "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node server.js",
-      "build": "webpack -w",
-      "dev": "webpack & node server.js"
-    },
+  },
   "homepage": "https://github.com/mstorino/buber#readme"
 }
