--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^4.11.0",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-router": "^2.4.1"
