--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
   },
   "dependencies": {
     "axios": "^0.12.0",
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "jsonwebtoken": "^7.4.1",
     "mongoose": "^4.11.0",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
-    "react-router": "^2.4.1"
+    "react-router": "^2.4.1",
+    "validator": "^7.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.3.13",
