build containers and  components, make main-nav a component in main folder

--- a/server/models/AppointmentSeed.json
+++ b/server/models/AppointmentSeed.json
@@ -1,6 +1,6 @@
 {
-	"_babysitterID": "YOUR SEED ID",
-	"_parentID": " YOUR SEED ID",
+	"_babysitterID": "596110e4d820852aebe6e3de",
+	"_parentID": "5961113ed820852aebe6e409",
 	"apptDateTime": "2012-04-23T18:25:43.511Z",
 	"requestDateTime": "2012-04-23T18:25:43.511Z",
 	"projectedDuration": 1,
