--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config ./webpack.config.js --progress --colors",
+    "dev": "webpack & node server.js",
     "start": "node server.js",
-    "build": "webpack -w",
-    "dev": "webpack & node server.js"
+    "postinstall": "npm run build"
   },
   "repository": {
     "type": "git",
